# talker

./: .gitignore  Justfile  README.md  camera-display-plan.md  display-plan-2.md
.github/workflows/: deploy.yml  firmware-build.yml
client/: CMakeLists.txt  sdkconfig.defaults
client/main/: CMakeLists.txt  main.c  server_root_ca.pem  startup.pcm
client/test/: main.c
firmware/: README.md
firmware/components/: README.md
firmware/projects/board-test/: CMakeLists.txt  sdkconfig.defaults
firmware/projects/board-test/main/: secrets.h.example
firmware/projects/display-cam/: CMakeLists.txt  sdkconfig.defaults
firmware/projects/display-cam/main/: CMakeLists.txt  main.c  secrets.h.example
firmware/projects/display-tester/: CMakeLists.txt  PLAN.md  sdkconfig.defaults
firmware/projects/display-tester/main/: CMakeLists.txt  main.c
firmware/projects/talker/: CMakeLists.txt  sdkconfig.defaults
firmware/projects/talker/main/: secrets.h.example
infra/: apis.tf  artifact_registry.tf  cloud_run.tf  iam.tf  main.tf  outputs.tf  secrets.tf  service_accounts.tf  terraform.tfvars  variables.tf  workload_identity.tf
scripts/: provision.py  seed_calendars.py
server/: Dockerfile  auth.py  calendars.py  config.py  db.py  display.py  main.py  pipeline.py  requirements.txt  server.py  tts.py  weather.py
server/tests/: test_display.py
sim/: display.html  index.html  sim.js  styles.css
tests/live/: generate_audio.py  test_scenarios.py
